--- a/src/pages/crat-table/cart-table.module.css
+++ b/src/pages/crat-table/cart-table.module.css
@@ -1,5 +1,5 @@
 .con{
-    padding-top: 150px;
+    padding-top: 50px;
     width: 100%;
     left:5px;
     
@@ -78,4 +78,9 @@
 }
 .bt_b{
     width: 10px;
+}
+
+.empty{
+    font-size: 1.2em;
+    font-weight: 700;
 }
