some more changes

--- a/src/components/cart-dropdown/crat-dropdown.module.css
+++ b/src/components/cart-dropdown/crat-dropdown.module.css
@@ -6,12 +6,13 @@
     background-color: whitesmoke;
     height: 450px;
     width: 350px;
-    border: red solid 2px;
+    border: white solid 2px;
     position: absolute;
     right: 43px;
     z-index: 1;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     top: 70px;
+    border-radius: 10px;
 }
 
 .footer{
@@ -28,6 +29,7 @@
         right: 20px;
         border: none;
         width: 370px;
+        
     }
     
   }
