--- a/src/components/collection-preview/collection-preview.styles.scss
+++ b/src/components/collection-preview/collection-preview.styles.scss
@@ -15,3 +15,10 @@
     justify-content: space-between;
   }
 }
+
+
+@media screen and (max-width: 600px) {
+  .preview {
+    flex-direction: column;
+  }
+}
