--- a/src/pages/crat-table/cart-table.module.css
+++ b/src/pages/crat-table/cart-table.module.css
@@ -98,6 +98,7 @@
         background-color: orange;
         justify-content: space-between;
         align-items: center;
+        border-radius: 5px;
 
     }
     h3 btn{
@@ -119,7 +120,7 @@
 
     .container{
     
-        min-height: 100vh;
+        min-height: 550px;
     }
     
   }
