changes made to make  app mobile responsive

--- a/src/components/collection-preview/collection-preview.styles.scss
+++ b/src/components/collection-preview/collection-preview.styles.scss
@@ -18,6 +18,10 @@
 
 
 @media screen and (max-width: 600px) {
+  .all{
+    
+    min-height: 100vh;
+  }
   .preview {
     flex-direction: column;
   }
