--- a/src/components/table-row/table-row.module.scss
+++ b/src/components/table-row/table-row.module.scss
@@ -29,7 +29,7 @@
 }
 
 .data_body:hover {
-	border-bottom: red 2px solid;
+	border-bottom: blue 2px solid;
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
